<resources>
    <string name="app_name">CoupleBet</string>
    <string name="title_home">Home</string>
    <string name="title_new_bet">New Bet</string>
    <string name="title_bet_history">History</string>
    <string name="title_bet_statistics">Statistics</string>

    <!--    New Bet Screen-->
    <string name="bet_title">Bet Title</string>
    <string name="bet_proposition">Bet Proposition</string>
    <string name="initiator_win">If Initiator wins?</string>
    <string name="participant_win">If participant wins?</string>
    <string name="bet_expiry">Bet Expiry Date</string>
    <string name="pending_date_expiry">No date has been selected</string>
    <string name="set_expiry_date_button">Set Date</string>
    <string name="save_bet_button">save the bet</string>

    <!--    Home Screen-->

    <string name="current_bet_title">Current Bet</string>
    <string name="current_bet_expiry_time_title">Time to Expiry:</string>
    <string name="current_bet_expiry_time">00</string>
    <string name="the_bet_title">The bet</string>
    <string name="the_bet">
        Lorem ipsum dolor sit amet, no eos congue ridens graeci,
        ne mel facete voluptaria, ei quo altera dignissim. Has eu percipit mediocritatem,
        eruditi signiferumque id sit, ex dicant laudem sea. Ius dicta placerat molestiae et,
        ut verear maiorum dissentias usu. Illum ubique sit at, audire dissentias in ius,
        suas nullam dolores ei vim. At mei lorem theophrastus definitionem.
    </string>
    <string name="initiator_wins">Initiator Wins (%s)</string>
    <string name="participant_wins">Participant Wins (%s)</string>
    <string name="initiator_winnings">
        Nec tale honestatis vituperatoribus ex. Qui modus reformidans ut. No epicuri inciderint.
    </string>
    <string name="current_bet_no_bet">There are currently no ongoing bets</string>

    <string name="participant_winnings">
        Dictas aperiam cu sit, eu cum scripta apeirian,
        id timeam ullamcorper eos, consul feugait electram ad nec.
    </string>

    <!--    Bet History Screen-->
    <string name="bet_history_bet_title">Twerk Contest</string>
    <string name="bet_history_bet_winner">Mercy won</string>
    <string name="bet_history_bet_time_title">Created at:</string>
    <string name="bet_history_bet_time">04/09/2019</string>
    <string name="bet_history_bet_status_title">Status:</string>
    <string name="bet_history_bet_status">Completed</string>
    <string name="no_data_available">There are no bets. Please use the add button to create a new bet</string>

    <!--    Bet Details Screen-->
    <string name="bet_details_title">Bet Details</string>
    <string name="bet_details_creation_date_title">Created On:</string>
    <string name="bet_details_declare_winner">Declare Winner</string>
    <string name="bet_details_cancel_bet">Cancel Bet</string>
    <string name="bet_details_edit_bet">Edit Bet</string>
    <string name="bet_details_bet_winner">Bet Winner</string>

    <string name="dialog_bet_details_cancel_bet_title">Confirmation</string>
    <string name="dialog_bet_details_cancel_bet_content">Are you sure you want to cancel this bet?</string>
    <string name="dialog_bet_details_cancel_bet_confirmed">The bet has been cancelled successfully</string>
</resources>
